--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "trx-util",
-  "version": "1.0.0",
+  "version": "0.0.3",
   "description": "工具函数",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tongruixun/trx-util.git"
+  },
   "author": "tongruixun",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tongruixun/trx-util/issues"
+  },
+  "homepage": "https://github.com/tongruixun/trx-util#readme",
+  "dependencies": {
+    "dayjs": "^1.10.4",
+    "js-yaml": "^4.0.0",
+    "marked": "^1.2.8",
+    "highlight.js": "^10.5.0"
+  }
 }
